--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
     <artifactId>hello-world-test</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.3-SNAPSHOT</version>
 
     <build>
         <pluginManagement>
@@ -40,8 +38,8 @@
     <distributionManagement>
         <repository>
             <id>nexus-releases</id>
-            <!-- <url>http://localhost:8081/nexus/content/repositories/releases/</url> -->
-            <url>http://localhost:8081/nexus/service/local/staging/deploy/maven2/</url>
+             <url>http://localhost:8081/nexus/content/repositories/releases/</url>
+<!--            <url>http://localhost:8081/nexus/service/local/staging/deploy/maven2/</url>-->
         </repository>
         <snapshotRepository>
             <id>nexus-snapshots</id>
