--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>hello-world-test</artifactId>
-    <version>1.4-SNAPSHOT</version>
+    <version>1.5-SNAPSHOT</version>
 
     <build>
         <pluginManagement>
@@ -53,11 +53,11 @@
             <id>release</id>
             <distributionManagement>
                 <repository>
-                    <id>my-releases-repo</id>
+                    <id>nexus-releases</id>
                     <url>http://localhost:8081/nexus/content/repositories/releases/</url>
                 </repository>
                 <snapshotRepository>
-                    <id>my-snapshots-repo</id>
+                    <id>nexus-snapshots</id>
                     <url>http://localhost:8081/nexus/content/repositories/snapshots/</url>
                 </snapshotRepository>
             </distributionManagement>
