--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
 
     <groupId>org.example</groupId>
     <artifactId>hello-world-test</artifactId>
-    <version>1.8-SNAPSHOT</version>
+    <version>1.9-SNAPSHOT</version>
 
     <build>
-        <pluginManagement>
+<!--        <pluginManagement>-->
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -47,7 +47,7 @@
                     </configuration>
                     </plugin>
             </plugins>
-        </pluginManagement>
+<!--        </pluginManagement>-->
     </build>
 
     <scm>
