--- a/pom.xml
+++ b/pom.xml
@@ -13,29 +13,29 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
-                    <configuration>
-                        <skip>true</skip>
-                    </configuration>
+<!--                    <configuration>-->
+<!--                        <skip>true</skip>-->
+<!--                    </configuration>-->
                 </plugin>
-                <plugin>
-                    <groupId>org.sonatype.plugins</groupId>
-                    <artifactId>nexus-staging-maven-plugin</artifactId>
-                    <version>1.6.6</version>
-                    <executions>
-                        <execution>
-                            <id>default-deploy</id>
-                            <phase>deploy</phase>
-                            <goals>
-                                <goal>deploy</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <serverId>nexus</serverId>
-                        <nexusUrl>http://localhost:8081/nexus/</nexusUrl>
-                        <skipStaging>true</skipStaging>
-                    </configuration>
-                </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>org.sonatype.plugins</groupId>-->
+<!--                    <artifactId>nexus-staging-maven-plugin</artifactId>-->
+<!--                    <version>1.6.6</version>-->
+<!--                    <executions>-->
+<!--                        <execution>-->
+<!--                            <id>default-deploy</id>-->
+<!--                            <phase>deploy</phase>-->
+<!--                            <goals>-->
+<!--                                <goal>deploy</goal>-->
+<!--                            </goals>-->
+<!--                        </execution>-->
+<!--                    </executions>-->
+<!--                    <configuration>-->
+<!--                        <serverId>nexus</serverId>-->
+<!--                        <nexusUrl>http://localhost:8081/nexus/</nexusUrl>-->
+<!--                        <skipStaging>true</skipStaging>-->
+<!--                    </configuration>-->
+<!--                </plugin>-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
@@ -43,7 +43,7 @@
                     <configuration>
                         <tagNameFormat>v@{project.version}</tagNameFormat>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
-                        <releaseProfiles>releases</releaseProfiles>
+<!--                        <releaseProfiles>releases</releaseProfiles>-->
                     </configuration>
                     </plugin>
             </plugins>
