--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>hello-world-test</artifactId>
-    <version>1.28-SNAPSHOT</version>
+    <version>1.28</version>
 
     <build>
 <!--        <pluginManagement>-->
@@ -17,19 +17,19 @@
 <!--                        <skip>true</skip>-->
 <!--                    </configuration>-->
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-gpg-plugin</artifactId>
-                    <executions>
-                        <execution>
-                            <id>sign-artifacts</id>
-                            <phase>verify</phase>
-                            <goals>
-                                <goal>sign</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>org.apache.maven.plugins</groupId>-->
+<!--                    <artifactId>maven-gpg-plugin</artifactId>-->
+<!--                    <executions>-->
+<!--                        <execution>-->
+<!--                            <id>sign-artifacts</id>-->
+<!--                            <phase>verify</phase>-->
+<!--                            <goals>-->
+<!--                                <goal>sign</goal>-->
+<!--                            </goals>-->
+<!--                        </execution>-->
+<!--                    </executions>-->
+<!--                </plugin>-->
 <!--                <plugin>-->
 <!--                    <groupId>org.sonatype.plugins</groupId>-->
 <!--                    <artifactId>nexus-staging-maven-plugin</artifactId>-->
@@ -67,7 +67,7 @@
         <connection>scm:git:https://github.com/shafreenAnfar/hello-world-release.git</connection>
         <developerConnection>scm:git:https://github.com/shafreenAnfar/hello-world-release.git</developerConnection>
         <url>https://github.com/shafreenAnfar/hello-world-release.git</url>
-        <tag>HEAD</tag>
+        <tag>v1.28</tag>
     </scm>
 
     <distributionManagement>
