--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>hello-world-test</artifactId>
-    <version>1.29</version>
+    <version>1.30-SNAPSHOT</version>
 
     <build>
 <!--        <pluginManagement>-->
@@ -67,7 +67,7 @@
         <connection>scm:git:https://github.com/shafreenAnfar/hello-world-release.git</connection>
         <developerConnection>scm:git:https://github.com/shafreenAnfar/hello-world-release.git</developerConnection>
         <url>https://github.com/shafreenAnfar/hello-world-release.git</url>
-        <tag>v1.29</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
